# Pydantic_API

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
fastapi_project/: __main__.py  app.py
fastapi_project/core/: pydantic_core.py  sqlalchemy_core.py
fastapi_project/db/: create_db.py  create_tables.py
fastapi_project/repositories/: repositories.py
fastapi_project/routers/: opinions.py  places.py
fastapi_project/tests/: conftest.py  test_api.py  test_db.py
migrations/: env.py
migrations/versions/: d8c8af3c32fe_init.py
